# moneymind

./: .gitignore  ARCHITECTURE.md  LICENSE  RALPH_PROMPT.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/commands/: finance-report.md
.claude/commands/ralph/: archive.md  explore.md
.claude/skills/ralph-archive/: SKILL.md
.claude/skills/ralph-explore/: SKILL.md
.claude/skills/screenshots/: SKILL.md
data/: demo.db
finance/: cli.py  db.py  server.py
finance/ai/: categories.py  categorize.py  enrich.py  pipeline.py
finance/analysis/: accounts.py  net_worth.py  overview.py  review.py  spending.py
finance/demo/: seed.py
finance/ingestion/: csv_import.py  simplefin.py  store.py  sync.py
finance/web/: app.py
finance/web/templates/: _macros.html  accounts.html  base.html  data.html  index.html  net_worth.html  pipeline.html  recurring.html  report_detail.html  reports.html  review.html  spending.html  transactions.html
openspec/: config.yaml
openspec/changes/ai-categorize/: design.md  tasks.md
openspec/changes/csv-import/: design.md  proposal.md  tasks.md
openspec/changes/dashboard/: design.md  proposal.md  tasks.md
openspec/changes/dashboard-enhancements/: design.md
openspec/changes/github-publish-prep/: design.md  proposal.md  tasks.md
openspec/changes/mcp-server/: proposal.md  tasks.md
openspec/changes/merchant-category-corrections/: proposal.md
openspec/changes/pipeline-analytics/: design.md  proposal.md  tasks.md
openspec/changes/pipeline-overhaul/: design.md  tasks.md
scripts/: screenshots.mjs
(+178 files in other folders)
